# recipe-search

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  biome.json  package-lock.json  package.json  pyproject.toml  seed.py
.github/ISSUE_TEMPLATE/: backend-feature.md  backend_feature.yml  bug_report.md  bug_report.yml  config.yml  frontend-feature.md  frontend_feature.yml
.github/PULL_REQUEST_TEMPLATE/: pr.yml
app/: __init__.py  main.py
app/api/: router.py
app/api/recipes/: dependencies.py  router.py  schemas.py  service.py
app/api/search/: dependencies.py  router.py  schemas.py  service.py
app/api/tags/: dependencies.py  router.py  schemas.py  service.py
app/core/: config.py  database.py  models.py  seed.py  service.py  utils.py
app/core/models/: __init__.py  ingredient.py  links.py  recipe.py  tag.py
app/core/repository/: __init__.py  base.py  ingredient.py  recipe.py  tag.py
app/frontend/: router.py
app/frontend/templates/: base.html  index.html  recipe_detail.html  recipes.html  search.html
app/frontend/templates/partials/: _results.html  _search.html
app/pantry/: router.py
app/recipes/: router.py  schemas.py  service.py
app/search/: router.py
app/static/css/: main.css
migrations/: env.py
migrations/versions/: 2486b4bc2f0f_first_version.py  82f5ff775bba_added_instructions.py
src/: main.py
src/css/: app.css
