[project]
name = "recipe-search"
version = "0.1.0"
description = "A self-hosted web-app to search for recipes locally."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]

[tool.djlint]
profile = "jinja"
include = "app/frontend/templates"
